# cloudflared

./: AGENTS.md  CMakeLists.txt  Makefile  PHASE1_NOTES.md  PHASE2_NOTES.md  PLAN.md  README.md  cpp_output.txt  go_output.txt  test_phase1.sh
components/cloudflared/: CMakeLists.txt
components/cloudflared/include/: edge_discovery.h  http_client_esp32.h  http_client_host.h  quick_tunnel.h
components/cloudflared/src/: edge_discovery.cpp  http_client_esp32.cpp  main.cpp  quick_tunnel.cpp
components/dns_utils/include/: dns_utils.h
components/dns_utils/src/: dns_utils.cpp
pquic/: CMakeLists.txt  sdkconfig.defaults
pquic/main/: CMakeLists.txt  idf_component.yml  pquic.c
quick-tunnel/: CMakeLists.txt  sdkconfig.defaults
quick-tunnel/main/: CMakeLists.txt  dns_utils.c  dns_utils.h  idf_component.yml  quick-tunnel.cpp
src/: http_client_host.cpp  main.cpp  quick_tunnel.cpp  quick_tunnel.h
tunnel-app/: CMakeLists.txt  sdkconfig.defaults
tunnel-app/main/: CMakeLists.txt  capnp_minimal.c  capnp_minimal.h  control_stream.c  control_stream.h  data_stream.c  data_stream.h  http_proxy.c  http_proxy.h  http_proxy_static.c  http_proxy_static.h  idf_component.yml  quic_tunnel.c  quic_tunnel.h  quick_tunnel.c  quick_tunnel.h  tunnel_main.c  tunnel_types.h
